--- a/src/app/mainroot/signinpage/signinpage.component.html
+++ b/src/app/mainroot/signinpage/signinpage.component.html
@@ -1,7 +1,11 @@
 
-<div class="row">
-  <div class=" text-center col-md-offset-3 col-md-5">
-    <app-signin></app-signin>
+<div class="container margin">
+  <div class="row">
+    <div class="col-12">
+      <div class="text-center">
+        <app-signin></app-signin>
+      </div>
+    </div>
   </div>
 </div>
 
