--- a/src/app/venueadmin/parentadminview/venueadminparentview/pagemixins/tabandtitleview/tabandtitleview.component.html
+++ b/src/app/venueadmin/parentadminview/venueadminparentview/pagemixins/tabandtitleview/tabandtitleview.component.html
@@ -23,12 +23,12 @@
   <div class="">
     <a *ngIf="suitsadmin && !activateedittitle" (click)="showedittitle()" class="settingslink"><h4>Edit</h4></a>
   </div>
-  <div class="col-4">
+  <div *ngIf="venueobject.venueimage_set.length > 0" class="col-4">
     <div class="float-left">
       <a style="cursor: pointer" [href]="domain" target="_blank"><button *ngIf="!deleteconfrimshow && !deleterequestshow" class=" btn previewsubmitbuttons" id="previewbutton">Preview Venue</button></a>
     </div>
   </div>
-  <div class="col-4">
+  <div *ngIf="!suitsadmin" class="col-4">
     <div class="float-right">
       <p style="font-style: 9px">All Changes Saved Automatically</p>
     </div>
@@ -42,9 +42,12 @@
         </strong>
       </h5>
     </div>
-    <div *ngIf="suitsadmin" class="col-2">
+    <div *ngIf="suitsadmin && !pushfail" class="col-2">
       <button class="btn" (click)="changestatus()" *ngIf="venueobject.online && !deleteconfrimshow && !deleterequestshow" id="deactivatebutton">Hide Venue</button>
       <button (click)="changestatus()" *ngIf="!venueobject.online && !deleteconfrimshow && !deleterequestshow" class="btn btn-success">Push Public</button>
+    </div>
+    <div *ngIf="pushfail" class="col-auto">
+      Venues must have an image
     </div>
     <div *ngIf="!suitsadmin" class="col-auto">
       <h5>Please email or call us to change the status of your venue</h5>
@@ -58,6 +61,11 @@
         <button (click)="deletevenue()" class="btn-danger">Delete</button>
       </div>
     </div>
+    <div *ngIf="suitsadmin" class="col-5">
+      <div class="float-right">
+        <p style="font-style: 9px">All Changes Saved Automatically</p>
+      </div>
+    </div>
     <br>
     <br>
   </div>
@@ -66,10 +74,10 @@
 
 <ul class="nav nav-tabs">
   <li class="nav-item">
-    <a class="nav-link" [routerLink]="['/admin', permission, 'venue-admin',venuenamelinkready,venueid, 'profile']">Venue Profile</a>
+    <a class="nav-link" [routerLink]="['/admin',permission,'venue-admin', venuenamelinkready, venueid,'venuepage' ]">Venue Page</a>
   </li>
   <li class="nav-item">
-    <a class="nav-link" [routerLink]="['/admin',permission,'venue-admin', venuenamelinkready, venueid,'venuepage' ]">Venue Page</a>
+    <a class="nav-link" [routerLink]="['/admin', permission, 'venue-admin',venuenamelinkready,venueid, 'profile']">Venue Profile</a>
   </li>
   <li class="nav-item">
     <a class="nav-link" [routerLink]="['/admin',permission,'venue-admin', venuenamelinkready, venueid,'room','list']">Room List</a>
