--- a/src/app/venueadmin/parentadminview/venueadminparentview/venueadminroomroot/venueroomadminpage/venueroomadminpage.component.html
+++ b/src/app/venueadmin/parentadminview/venueadminparentview/venueadminroomroot/venueroomadminpage/venueroomadminpage.component.html
@@ -31,9 +31,12 @@
       </div>
     </div>
     <div class="col-auto">
-      <div class="col-auto">
+      <div *ngIf="!fullbuyoutnoonline" class="col-auto">
         <button class="btn" (click)="roomonline()" *ngIf="!venueobject.fullbuyoutonline" style="background-color: green; color: white;">Push Public</button>
         <button class="btn" (click)="roomoffline()" *ngIf="venueobject.fullbuyoutonline" style="background-color: #ffbd59">Hide Offline</button>
+      </div>
+      <div *ngIf="fullbuyoutnoonline" class="col-auto">
+        Full buyout cannot be turned on unless you have at least one venue image
       </div>
     </div>
     <div class="col-auto">
@@ -276,9 +279,12 @@
         </div>
       </div>
     </div>
-    <div class="col-auto">
+    <div *ngIf="!roomnoonline" class="col-auto">
       <button class="btn" (click)="roomonline()" *ngIf="!roomobject.online" style="background-color: green; color: white;">Push Public</button>
       <button class="btn" (click)="roomoffline()" *ngIf="roomobject.online" style="background-color: #ffbd59">Hide Room</button>
+    </div>
+    <div *ngIf="roomnoonline" class="col-auto">
+      Room cannot be turned on unless you have at least one image uploaded
     </div>
     <div class="col-auto">
       <button (click)="showdeleteconfrim()" class=" btn btn-danger">Delete Room</button>
