fixed kathys issues and the alike

--- a/src/app/mainroot/team/team.component.scss
+++ b/src/app/mainroot/team/team.component.scss
@@ -6,15 +6,15 @@
 
 @media (min-width: 992px) {
   .height-half{
-    height: 47vh
+    height: 63vh
   }
 }
-
 
 .header {
   text-align: center;
   font-size: 52px;
   font-weight: 100;
+  padding-top: 10px;
   margin: 25px;
   font-family: "Helvetica";
   letter-spacing: 2px;
