--- a/src/app/suitsandtablesadmin/suitsdeclinedapplications/suitsdeclinedapplications.component.html
+++ b/src/app/suitsandtablesadmin/suitsdeclinedapplications/suitsdeclinedapplications.component.html
@@ -18,7 +18,7 @@
   </div>
 </div>
 
-<table width="100%">
+<table *ngIf="!choicesload" class="table-hover" width="100%">
   <tr>
     <th>
       Venue Name
