--- a/src/app/suitsandtablesadmin/suitsnewvenueapplications/suitsnewvenueapplications.component.html
+++ b/src/app/suitsandtablesadmin/suitsnewvenueapplications/suitsnewvenueapplications.component.html
@@ -10,7 +10,7 @@
   </div>
 </div>
 
-<table width="100%">
+<table class="table-hover" *ngIf="!choicesload" width="100%">
   <tr>
     <th>
       Venue Name
