--- a/src/app/suitsandtablesadmin/suitsvenueusers/suitsvenueusers.component.html
+++ b/src/app/suitsandtablesadmin/suitsvenueusers/suitsvenueusers.component.html
@@ -14,7 +14,7 @@
   </div>
 </div>
 
-<table width="100%">
+<table *ngIf="!choicesload" class="table-hover" width="100%">
   <tr class="text-center">
     <th>
       Name
