--- a/src/app/venueadmin/parentadminview/adminnavbar/adminnavbar.component.html
+++ b/src/app/venueadmin/parentadminview/adminnavbar/adminnavbar.component.html
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="col-10">
       <div class="float-left">
-        <h4 routerLink="" id="label" style="cursor: pointer; color: #000000;"> Suits <span class="STBlue">+</span> Tables</h4>
+        <h4 id="label" style="color: #000000;"> Suits <span class="STBlue">+</span> Tables</h4>
       </div>
     </div>
     <div class="col-auto">
