--- a/src/app/venueadmin/parentadminview/venueadminparentview/venueadminroomroot/venueadminroomlist/venueadminroomlist.component.html
+++ b/src/app/venueadmin/parentadminview/venueadminparentview/venueadminroomroot/venueadminroomlist/venueadminroomlist.component.html
@@ -86,10 +86,10 @@
               <strong>Status:</strong>
             </div>
             <div *ngIf="!room.online" class="">
-              <strong style="color: white; background-color: red; border: solid 1px red">Hidden</strong>
+              <strong style="color: red; font-style: italic;">Hidden</strong>
             </div>
             <div *ngIf="room.online" class="">
-              <strong style="color: white; background-color: green; border: solid 1px green">Public</strong>
+              <strong style="color: green; font-style: italic;">Public</strong>
             </div>
           </div>
           <hr>
