--- a/src/app/venueadmin/parentadminview/venueadminparentview/pagemixins/tabandtitleview/tabandtitleview.component.html
+++ b/src/app/venueadmin/parentadminview/venueadminparentview/pagemixins/tabandtitleview/tabandtitleview.component.html
@@ -25,7 +25,7 @@
   </div>
   <div *ngIf="venueobject.venueimage_set.length > 0" class="col-4">
     <div class="float-left">
-      <a style="cursor: pointer" [href]="domain" target="_blank"><button *ngIf="!deleteconfrimshow && !deleterequestshow" class=" btn previewsubmitbuttons" id="previewbutton">Preview Venue</button></a>
+      <a style="cursor: pointer" (click)="navtovenue()"><button *ngIf="!deleteconfrimshow && !deleterequestshow" class=" btn previewsubmitbuttons" id="previewbutton">Preview Venue</button></a>
     </div>
   </div>
   <div *ngIf="!suitsadmin" class="col-4">
@@ -49,7 +49,7 @@
     <div *ngIf="pushfail" class="col-auto">
       Venues must have an image
     </div>
-    <div *ngIf="!suitsadmin" class="col-auto">
+    <div style="font-style: 9px" *ngIf="!suitsadmin" class="col-auto">
       <h5>Please email or call us to change the status of your venue</h5>
     </div>
     <div *ngIf="suitsadmin" class="col-2">
