--- a/src/app/venueadmin/parentadminview/venueadminparentview/venueprofile/venueprofile.component.html
+++ b/src/app/venueadmin/parentadminview/venueadminparentview/venueprofile/venueprofile.component.html
@@ -133,7 +133,6 @@
 <div class="row justify-content-start">
   <h5><strong>Venue Attributes</strong></h5>
 </div>
-<div class="row justify-content-start">
   <form  #venueattributeform="ngForm">
     <div class="row">
       <div *ngIf="permission === 'suits'" class="col-4">
@@ -204,7 +203,9 @@
 
         </select>
       </div>
-      <div class="col-4">
+    </div>
+    <div class="row">
+      <div class="col-3">
         <strong>Venue Type</strong>
         <br>
         <select id="venuetypeselect"
@@ -215,21 +216,20 @@
           <option selected value="">Select Venue Type</option>
           <option *ngFor="let type of venueattributes.venuetype" [value]="type.pk">{{type.type}}</option>
         </select>
-        <div>
-          <strong>Price Rating</strong>
-          <br>
-          <select id="pricerating"
-                  class="form-control"
-                  name="pricerating"
-                  (change)="updatevenue()"
-                  [ngModel]="venueobject.pricerating">
-            <option selected value="">Select a price rating</option>
-            <option value="1">$ 30 and under</option>
-            <option value="2">$ 31 to $ 50</option>
-            <option value="3">$ 51 and over</option>
-          </select>
-        </div>
+      </div>
+      <div class="col-3">
+        <strong>Price Rating</strong>
+        <br>
+        <select id="pricerating"
+                class="form-control"
+                name="pricerating"
+                (change)="updatevenue()"
+                [ngModel]="venueobject.pricerating">
+          <option selected value="">Select a price rating</option>
+          <option value="1">$ 30 and under</option>
+          <option value="2">$ 31 to $ 50</option>
+          <option value="3">$ 51 and over</option>
+        </select>
       </div>
     </div>
   </form>
-</div> <!--venue attributes row 1-->
