--- a/src/app/venueadmin/parentadminview/venueadminparentview/venueadminroomroot/venueroomadminpage/venueroomadminpage.component.html
+++ b/src/app/venueadmin/parentadminview/venueadminparentview/venueadminroomroot/venueroomadminpage/venueroomadminpage.component.html
@@ -500,7 +500,7 @@
                  type="checkbox"
                  id="sixtyinchroundscheckbox"
                  name="sixtyinchroundscheckbox"
-                 [ngModel]="roomobject.sixtyroundseatingoption"> <strong>60' Rounds</strong>
+                 [ngModel]="roomobject.sixtyroundseatingoption"> <strong> Rounds</strong>
         </div>
 
         <div class="col-auto">
