--- a/src/app/mainroot/landingpage/landingpage.component.html
+++ b/src/app/mainroot/landingpage/landingpage.component.html
@@ -8,7 +8,7 @@
           <form #selectform="ngForm">
             <select
               id="cityselect"
-              class="mt-3 text-white"
+              class="mt-3 mb-5 text-white"
               autofocus
               (change)="browse()"
               name="cityselect"
